--- a/style.css
+++ b/style.css
@@ -34,4 +34,4 @@ img {
 	height: auto;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Cairo%27);
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
